[gd_scene load_steps=57 format=2]

[ext_resource path="res://assets/sprites/flowers_glow.png" type="Texture" id=1]
[ext_resource path="res://scripts/kitten_states/PURRING.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/cats.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/planting.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/purring.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/meow.ogg" type="AudioStream" id=9]
[ext_resource path="res://scripts/kitten.gd" type="Script" id=10]
[ext_resource path="res://scripts/kitten_states/WALK.gd" type="Script" id=11]
[ext_resource path="res://scripts/kitten_states/IDLE.gd" type="Script" id=12]
[ext_resource path="res://scripts/kitten_states/DRAGGED.gd" type="Script" id=13]
[ext_resource path="res://scripts/kitten_states/PLANT.gd" type="Script" id=14]
[ext_resource path="res://scripts/kitten_states/HOUSED.gd" type="Script" id=15]
[ext_resource path="res://scripts/kitten_states/SELECTED.gd" type="Script" id=16]
[ext_resource path="res://scripts/kitten_states/GAMEOVER.gd" type="Script" id=17]
[ext_resource path="res://scripts/kitten_states/GONE.gd" type="Script" id=18]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 712, 534, 178, 178 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 890, 534, 178, 178 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 890, 1246, 178, 178 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 82, 0, 82, 81 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 82, 81 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 356, 534, 178, 178 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 534, 534, 178, 178 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 178, 356, 178, 178 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1068, 356, 178, 178 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 82, 81 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 356, 1068, 178, 178 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 534, 1068, 178, 178 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 162, 82, 81 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 81, 82, 81 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 243, 82, 81 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 82, 162, 82, 81 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 82, 81, 82, 81 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 82, 243, 82, 81 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1246, 356, 178, 178 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 356, 356, 178, 178 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 534, 356, 178, 178 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 356, 1246, 178, 178 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 534, 1246, 178, 178 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1246, 1246, 178, 178 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 712, 1246, 178, 178 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1246, 534, 178, 178 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 82, 0, 82, 81 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1246, 178, 178 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 178, 1246, 178, 178 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 356, 178, 178 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1068, 1068, 178, 178 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1068, 534, 178, 178 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 712, 356, 178, 178 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 890, 356, 178, 178 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 712, 178, 178 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 178, 712, 178, 178 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "walk_up_right_yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "dragged_yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "gone_yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "gone_red",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "walk_down_left_yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 8 ), SubResource( 9 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "plant_red",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk_down_right_red",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 14 ), SubResource( 13 ) ],
"loop": true,
"name": "plant_warning_red",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 17 ), SubResource( 16 ) ],
"loop": true,
"name": "plant_warning_yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": true,
"name": "idle_red",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "walk_down_left_red",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "walk_down_right_yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ) ],
"loop": true,
"name": "selected_yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 44 ), SubResource( 45 ), SubResource( 45 ), SubResource( 27 ) ],
"loop": false,
"name": "plant_yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "walk_up_left_yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "dragged_red",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ) ],
"loop": true,
"name": "selected_red",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ) ],
"loop": true,
"name": "idle_yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "walk_up_right_red",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "walk_up_left_red",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 57.9491, 61.6629 )

[sub_resource type="AudioStreamRandomPitch" id=39]
audio_stream = ExtResource( 9 )
random_pitch = 2.05

[sub_resource type="AudioStreamRandomPitch" id=40]
audio_stream = ExtResource( 7 )
random_pitch = 2.05

[sub_resource type="AudioStreamRandomPitch" id=41]
audio_stream = ExtResource( 8 )

[node name="kitten" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
z_index = 2
input_pickable = true
collision_mask = 0
collision/safe_margin = 50.0
script = ExtResource( 10 )

[node name="debug" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -44.5
margin_right = 20.0
margin_bottom = -30.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0306273, 0.176876 )
scale = Vector2( 0.726067, 0.722355 )
frames = SubResource( 37 )
animation = "plant_warning_yellow"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 4.5 )
shape = SubResource( 38 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="States" type="Node" parent="."]

[node name="WALK" type="Node2D" parent="States"]
script = ExtResource( 11 )

[node name="IDLE" type="Node2D" parent="States"]
script = ExtResource( 12 )

[node name="DRAGGED" type="Node2D" parent="States"]
script = ExtResource( 13 )

[node name="PLANT" type="Node2D" parent="States"]
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="States/PLANT"]
wait_time = 5.0
one_shot = true

[node name="HOUSED" type="Node2D" parent="States"]
script = ExtResource( 15 )

[node name="SELECTED" type="Node2D" parent="States"]
script = ExtResource( 16 )

[node name="GAMEOVER" type="Node2D" parent="States"]
script = ExtResource( 17 )

[node name="GONE" type="Node2D" parent="States"]
script = ExtResource( 18 )

[node name="PURRING" type="Node2D" parent="States"]
script = ExtResource( 2 )

[node name="AudioMeow" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 39 )
attenuation = 0.392292
bus = "Sounds"

[node name="AudioPlanting" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 40 )
volume_db = 2.145
attenuation = 0.392292
bus = "Sounds"

[node name="AudioPurring" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 41 )
volume_db = 4.374
attenuation = 0.378929
bus = "Sounds"
[connection signal="input_event" from="." to="." method="_on_kitten_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_kitten_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_kitten_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="gone" from="States/PLANT" to="." method="_on_PLANT_gone"]
[connection signal="timeout" from="States/PLANT/Timer" to="States/PLANT" method="_on_Timer_timeout"]
